# Simulvolve

./: .gitignore  README.md  next.config.js  package-lock.json  package.json  tailwind.config.js
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
frontend/: index.html  index.js  package-lock.json  webpack.config.js
libs/genetic-algorithm/: Cargo.toml
libs/genetic-algorithm/src/: chromosome.rs  crossover.rs  individual.rs  lib.rs  mutation.rs  selection.rs
libs/genetic-algorithm/src/crossover/: uniform.rs
libs/genetic-algorithm/src/mutation/: gaussian_mutation.rs
libs/genetic-algorithm/src/selection/: roulette_wheel.rs
libs/neural-network/: Cargo.toml
libs/neural-network/src/: layer.rs  lib.rs  neuron.rs
libs/simulation/: Cargo.toml
libs/simulation-wasm/: Cargo.toml
libs/simulation-wasm/pkg/: lib_simulation_wasm.d.ts  lib_simulation_wasm.js  lib_simulation_wasm_bg.js  lib_simulation_wasm_bg.wasm  lib_simulation_wasm_bg.wasm.d.ts  package.json
libs/simulation-wasm/src/: lib.rs
libs/simulation/src/: brain.rs  config.rs  eye.rs  lib.rs  snake.rs  world.rs
src/components/: SimulvolveWindow.tsx
src/components/Statistics/: PauseResumeButton.tsx  Score.tsx
src/components/game/: Screen.tsx
src/context/: WASM.tsx
src/pages/: _app.tsx  index.tsx
www/: index.js  package-lock.json  package.json
